--- a/Booki/index.html
+++ b/Booki/index.html
@@ -6,12 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Pour les différentes tailles d'écrans-->
-    <link rel="stylesheet" media="screen  and (min-width:769px)" href="style.css">
-    <link rel="stylesheet" media="screen and (max-width:768px) and (min-width: 300px)" href="media-queries.css">
+    <link rel="stylesheet" media="screen  and (min-width:768px)" href="style.css">
+    <link rel="stylesheet" media="screen and (max-width:767px) and (min-width: 300px)" href="media-queries.css">
     <link rel="icon" href="/Logo/Fav.png" type="image/icon">
     <script src="https://kit.fontawesome.com/67fa93fe08.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@449&display=swap" rel="stylesheet">
     <title>Booki</title>
 </head>
@@ -215,10 +213,10 @@
 
                 <!-- plus populaires seulement-->
                 <aside href="#" class="container-plus-populaires">
-                    <div class="star-populaires">
+                    <a href="#" class="star-populaires">
                         <h2>Les plus populaires</h2>
                         <i class="fas fa-star"></i>
-                    </div>
+                    </a>
 
                     <a href="#" class="cards-populaires">
                         <img class="img-populaires"
