--- a/Booki/index.html
+++ b/Booki/index.html
@@ -214,11 +214,11 @@
                 </div>
 
                 <!-- plus populaires seulement-->
-                <aside href="#" class="container-plus-populaires">
-                    <div class="star-populaires">
+                <aside class="container-plus-populaires">
+                    <a href="#" class="star-populaires">
                         <h2>Les plus populaires</h2>
                         <i class="fas fa-star"></i>
-                    </div>
+                    </a>
 
                     <a href="#" class="cards-populaires">
                         <img class="img-populaires"
