--- a/Booki/index.html
+++ b/Booki/index.html
@@ -27,6 +27,7 @@
     </header>
 
     <main class="wrapper">
+
         <!--Section rechercher par géolocalisation-->
         <div class="section-container">
             <div class="contain-search">
@@ -34,10 +35,12 @@
                 <p>En plein centre ville ou en pleine nature</p>
                 <form action="#" class="search">
                     <input type="button" value="btn-geoloc" class="btn-geoloc">
-                    <!--(Pour le bouton class="btn-geoloc")Impossible de récupérer l'icon sur le site, j'ai mis un SVG en background dans le css-->
+                    <!--(Pour le bouton class="btn-geoloc")Impossible de récupérer l'icon sur le site, 
+                        j'ai mis un SVG en background dans le css-->
                     <input type="text" class="marseille" placeholder="Marseille, France">
                     <button type="button" class="rechercher">
-                        <img src="/Logo/magnifyer.svg" class="loupe" alt="loupe" />Rechercher
+                        <img src="/Logo/magnifyer.svg" class="loupe" alt="loupe" />
+                        Rechercher
                     </button>
                 </form>
 
@@ -57,8 +60,9 @@
 
                     <div class="family">
                         <div class="person">
-                            <!--ça ne marchait pas avec le code fournit par le site (https://fontawesome.com/icons/child-reaching?s=solid), 
-                                            modification faite en enlevant "-reaching" et "fa-solid" pour le remplacer par fas-->
+                            <!--ça ne marchait pas avec le code fournit par le site 
+                            (https://fontawesome.com/icons/child-reaching?s=solid), 
+                            modification faite en enlevant "-reaching" et "fa-solid" pour le remplacer par fas-->
                             <i class="fas fa-child"></i>
                         </div>
                         <input type="button" value="Familial" class="fam" />
@@ -86,7 +90,9 @@
                 <div class="icon-info">
                     <i class="fas fa-info fa-xs"></i>
                 </div>
-                <p class="info">Plus de 500 logements disponibles dans cette ville</p>
+                <p class="info">
+                    Plus de 500 logements disponibles dans cette ville
+                </p>
             </div>
 
 
@@ -95,7 +101,9 @@
             <section class="container-hebergements-populaires">
                 <!-- hébergements seulement-->
                 <div class="hebergements-cards">
-                    <a href="#" id="titre-hebergements">Hébergemement à Marseille</a>
+                    <a href="#" id="titre-hebergements">
+                        Hébergemement à Marseille
+                    </a>
                     <!-- Première ligne-->
                     <div class="group-cards-1">
 
@@ -211,12 +219,9 @@
                     <a href="#" class="afficher">Afficher plus</a>
                 </div>
 
+
                 <!-- plus populaires seulement-->
-<<<<<<< HEAD
                 <aside class="container-plus-populaires">
-=======
-                <aside href="#" class="container-plus-populaires">
->>>>>>> b5efb3e7a596ebd4b768f39e878ea4e79f6624b0
                     <a href="#" class="star-populaires">
                         <h2>Les plus populaires</h2>
                         <i class="fas fa-star"></i>
@@ -284,7 +289,9 @@
 
             <!--Section activités-->
             <section class="container-activites">
-                <h1 href="#" id="titre-activites">Activités à Marseille</h1>
+                <a href="#" id="titre-activites">
+                    Activités à Marseille
+                </a>
 
                 <a href="#" class="box-total-cards-activites">
 
