--- a/Booki/index.html
+++ b/Booki/index.html
@@ -39,7 +39,7 @@
                         j'ai mis un SVG en background dans le css-->
                     <input type="text" class="marseille" placeholder="Marseille, France">
                     <button type="button" class="rechercher">
-                        <img src="/Logo/magnifyer.svg" class="loupe" alt="loupe" />
+                        <img src="/Image/icons/magnifyer.svg" class="loupe" alt="loupe" />
                         Rechercher
                     </button>
                 </form>
