--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Pour les différentes tailles d'écrans-->
-    <link rel="stylesheet" media="screen  and (min-width:768px)" href="style.css">
-    <link rel="stylesheet" media="screen and (max-width:767px) and (min-width: 300px)" href="media-queries.css">
+    <link rel="stylesheet" media="screen  and (min-width:768px)" href="Booki/style.css">
+    <link rel="stylesheet" media="screen and (max-width:767px) and (min-width: 300px)" href="Booki/media-queries.css">
     <link rel="icon" href="/Logo/Fav.png" type="image/icon">
     <script src="https://kit.fontawesome.com/67fa93fe08.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@449&display=swap" rel="stylesheet">
