--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Pour les différentes tailles d'écrans-->
-    <link rel="stylesheet" media="screen  and (min-width:768px)" href="Booki/style.css">
-    <link rel="stylesheet" media="screen and (max-width:767px) and (min-width: 300px)" href="Booki/media-queries.css">
+    <link rel="stylesheet" media="screen  and (min-width:768px)" href="booki/style.css">
+    <link rel="stylesheet" media="screen and (max-width:767px) and (min-width: 300px)" href="booki/media-queries.css">
     <link rel="icon" href="logo/Fav.png" type="image/icon">
     <script src="https://kit.fontawesome.com/67fa93fe08.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@449&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
     <!--Conteneur header-->
     <header class="wrapper">
         <div class="header-container">
-            <img src="Logo/Booki.png" class="logo" alt="logo" />
+            <img src="logo/Booki.png" class="logo" alt="logo" />
             <nav class="nav-bar">
                 <a href="#titre-hebergements" class="hebergements-nav">Hébergements</a>
                 <a href="#titre-activites" class="activite-nav">Activités</a>
@@ -97,7 +97,6 @@
 
 
             <!-- hébergements et plus populaires -->
-
             <section class="container-hebergements-populaires">
                 <!-- hébergements seulement-->
                 <div class="hebergements-cards">
@@ -218,7 +217,6 @@
 
                     <a href="#" class="afficher">Afficher plus</a>
                 </div>
-
 
                 <!-- plus populaires seulement-->
                 <aside class="container-plus-populaires">
