folders names lowercase

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Pour les différentes tailles d'écrans-->
-    <link rel="stylesheet" media="screen  and (min-width:768px)" href="booki/style.css">
-    <link rel="stylesheet" media="screen and (max-width:767px) and (min-width: 300px)" href="booki/media-queries.css">
-    <link rel="icon" href="logo/Fav.png" type="image/icon">
+    <link rel="stylesheet" media="screen  and (min-width:768px)" href="bookistyle/style.css">
+    <link rel="stylesheet" media="screen and (max-width:767px) and (min-width: 300px)" href="bookistyle/media-queries.css">
+    <link rel="icon" href="logos/Fav.png" type="images/icon">
     <script src="https://kit.fontawesome.com/67fa93fe08.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@449&display=swap" rel="stylesheet">
     <title>Booki</title>
@@ -18,7 +18,7 @@
     <!--Conteneur header-->
     <header class="wrapper">
         <div class="header-container">
-            <img src="logo/Booki.png" class="logo" alt="logo" />
+            <img src="logos/Booki.png" class="logo" alt="logo" />
             <nav class="nav-bar">
                 <a href="#titre-hebergements" class="hebergements-nav">Hébergements</a>
                 <a href="#titre-activites" class="activite-nav">Activités</a>
@@ -39,7 +39,7 @@
                         j'ai mis un SVG en background dans le css-->
                     <input type="text" class="marseille" placeholder="Marseille, France">
                     <button type="button" class="rechercher">
-                        <img src="image/icons/magnifyer.svg" class="loupe" alt="loupe" />
+                        <img src="images/icons/magnifyer.svg" class="loupe" alt="loupe" />
                         Rechercher
                     </button>
                 </form>
@@ -108,7 +108,7 @@
 
                         <a href="#" class="cards-hebergements-marseille">
                             <img class="img-hebergements"
-                                src="image/hebergement_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="img" />
+                                src="images/hebergement_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="img" />
                             <h3 class="nom-hotel">Auberge La Cannebière</h3>
                             <p class="p-prix">Nuit à partir de <b>25€</b></p>
                             <div class="star">
@@ -126,7 +126,7 @@
 
                         <a href="#" class="cards-hebergements-marseille">
                             <img class="img-hebergements"
-                                src="image/hebergement_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="img" />
+                                src="images/hebergement_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="img" />
                             <h3 class="nom-hotel">Hôtel du port</h3>
                             <p class="p-prix">Nuit à partir de 52<b>€</b></p>
                             <div class="star">
@@ -142,7 +142,7 @@
 
                         <a href="#" class="cards-hebergements-marseille">
                             <img class="img-hebergements"
-                                src="image/hebergement_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="img" />
+                                src="images/hebergement_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="img" />
                             <h3 class="nom-hotel">Hôtel les mouettes</h3>
                             <p class="p-prix">Nuit à partir de 76<b>€</b></p>
                             <div class="star">
@@ -164,7 +164,7 @@
                     <div class="group-cards-2">
                         <a href="#" class="cards-hebergements-marseille">
                             <img class="img-hebergements"
-                                src="image/hebergement_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="img" />
+                                src="images/hebergement_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="img" />
                             <h3 class="nom-hotel">Hôtel de la mer</h3>
                             <p class="p-prix">Nuit à partir de 46<b>€</b></p>
                             <div class="star">
@@ -182,7 +182,7 @@
 
                         <a href="#" class="cards-hebergements-marseille">
                             <img class="img-hebergements"
-                                src="image/hebergement_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="img" />
+                                src="images/hebergement_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="img" />
                             <h3 class="nom-hotel">Auberge Le Panier</h3>
                             <p class="p-prix">Nuit à partir de <b>23€</b></p>
                             <div class="star">
@@ -200,7 +200,7 @@
 
                         <a href="#" class="cards-hebergements-marseille">
                             <img class="img-hebergements"
-                                src="image/hebergement_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="img" />
+                                src="images/hebergement_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="img" />
                             <h3 class="nom-hotel">Hôtel chez Amina</h3>
                             <p class="p-prix">Nuit à partir de 96<b>€</b></p>
                             <div class="star">
@@ -227,7 +227,7 @@
 
                     <a href="#" class="cards-populaires">
                         <img class="img-populaires"
-                            src="image/hebergement_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="img" />
+                            src="images/hebergement_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="img" />
                         <div class="container-textes-populaires">
                             <h3 class="nom-hotel-populaires">Hôtel Le soleil du matin</h3>
                             <p class="p-prix-populaires">Nuit à partir de 128<b>€</b></p>
@@ -244,7 +244,7 @@
                     </a>
 
                     <a href="#" class="cards-populaires">
-                        <img class="img-populaires" src="image/hebergement_medium/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                        <img class="img-populaires" src="images/hebergement_medium/aw-creative-VGs8z60yT2c-unsplash.jpg"
                             alt="img" />
                         <div class="container-textes-populaires">
                             <h3 class="nom-hotel-populaires">Au coeur de l'eau Chambres d'Hôtes</h3>
@@ -265,7 +265,7 @@
 
                     <a href="#" class="cards-populaires">
                         <img class="img-populaires"
-                            src="image/hebergement_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="img" />
+                            src="images/hebergement_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="img" />
                         <div class="container-textes-populaires">
                             <h3 class="nom-hotel-populaires">Hôtel Tout bleu et Blanc</h3>
                             <p class="p-prix-populaires">Nuit à partir de 68<b>€</b></p>
@@ -295,7 +295,7 @@
 
                     <div class="cards-activites">
                         <img class="img-activites-port"
-                            src="image/activite_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="img" />
+                            src="images/activite_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="img" />
                         <h3 class="lieu-activite">Vieux Port</h3>
                     </div>
 
@@ -304,19 +304,19 @@
 
                         <div class="cards-activites-group-top">
                             <img class="img-activites-group-top"
-                                src="image/activite_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="img" />
+                                src="images/activite_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="img" />
                             <h3 class="lieu-activite1">Fort de Pomègues</h3>
                         </div>
                         <div class="cards-activites-group-bottom">
                             <img class="img-activites-group-bottom"
-                                src="image/activite_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="img" />
+                                src="images/activite_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="img" />
                             <h3 class="lieu-activite1">Îles du Frioul</h3>
                         </div>
                     </div>
 
                     <div class="cards-activites">
                         <img class="img-activites-parc"
-                            src="image/activite_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="img" />
+                            src="images/activite_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="img" />
                         <h3 class="lieu-activite">Parc National des Calanques</h3>
                     </div>
 
@@ -325,12 +325,12 @@
 
                         <div class="cards-activites-group-2-top">
                             <img class="img-activites-group-2-T"
-                                src="image/activite_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="img" />
+                                src="images/activite_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="img" />
                             <h3 class="lieu-activite1">Notre-Dame-de-la-Garde</h3>
                         </div>
                         <div class="cards-activites-group-2-bottom">
                             <img class="img-activites-group-2-B"
-                                src="image/activite_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="img" />
+                                src="images/activite_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="img" />
                             <h3 class="lieu-activite1">Parc Longchamp</h3>
                         </div>
                     </div>
